--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     ext.retrofit_version = '2.3.0'
     ext.room_version = '2.2.4'
     ext.nav_version = '2.3.0-alpha02'
+    ext.retrofit_coroutines_adapter_version = '0.9.2'
+
+    ext.dagger_version = "2.25.2"
     repositories {
         google()
         jcenter()
