--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -55,23 +56,17 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+
     //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-
-    //Testing Navigation
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-
-    //Android Test
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Network: Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
     // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
 
@@ -79,13 +74,23 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
     implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
 
-    //Room: Persistence Library
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    //JUnit Test
+    testImplementation 'junit:junit:4.12'
+    api 'androidx.annotation:annotation:1.1.0'
+    //Android Test
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation "androidx.test.ext:junit-ktx:$JUnit_version"
 
-    //Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
+    //Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Room Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
+    //Mockiot
+    testImplementation 'org.mockito:mockito-core:2.25.0'
+
+    //Testing Navigation
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 }
