--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,9 @@ buildscript {
     ext.room_version = '2.2.4'
     ext.nav_version = '2.3.0-alpha02'
     ext.retrofit_coroutines_adapter_version = '0.9.2'
-
+    ext.JUnit_version = '1.1.2-alpha02'
     ext.dagger_version = "2.25.2"
+
     repositories {
         google()
         jcenter()
