--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //Mockiot
+    //Mockito
     testImplementation 'org.mockito:mockito-core:2.25.0'
 
     //Testing Navigation
